force-app/main/default/objects/gr_PerformanceMeasure__c/gr_PerformanceMeasure__c.object-meta.xml
<CustomObject>
    <label>Performance Measure</label>
    <nameField>
        <label>Performance Measure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>