force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>gr_Collection_Method__c</fullName>
    <description>A text description of how the performance measure data is collected for the grant program or Federal award project.</description>
    <label>Collection Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>