force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Description__c.field-meta.xml
<CustomField>
    <fullName>gr_Description__c</fullName>
    <description>A narrative describing the performance measure against which grant program or Federal award project progress and activities can be measured. This can be quantitative or qualitative. For example, it can include counts, percentages, or levels. It could also</description>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>