force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_GoalActivityId__c.field-meta.xml
<CustomField>
    <fullName>gr_GoalActivityId__c</fullName>
    <description>A number or label used to track a grant program, grant program project, or Federal award project activity as it relates to goals and objectives. (203, augmented)</description>
    <label>Goal Activity</label>
    <referenceTo>gr_GoalActivity__c</referenceTo>
    <relationshipLabel>gr_Performance Measures</relationshipLabel>
    <relationshipName>gr_Performance_Measures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>