force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Missed_Target_Explanation__c.field-meta.xml
<CustomField>
    <fullName>gr_Missed_Target_Explanation__c</fullName>
    <description>Information regarding a potential shortfall for the performance measure target value for the grant program or Federal award project. (202, augmented)</description>
    <label>Missed Target Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>