force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Performance_Measure_ID__c.field-meta.xml
<CustomField>
    <fullName>gr_Performance_Measure_ID__c</fullName>
    <label>Performance Measure ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>