force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Performance_Measure_Source__c.field-meta.xml
<CustomField>
    <fullName>gr_Performance_Measure_Source__c</fullName>
    <description>A text description of where the performance measure data is coming from for the grant program or Federal award project.</description>
    <label>Performance Measure Source</label>
    <type>TextArea</type>
</CustomField>