force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Reporting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>gr_Reporting_Frequency__c</fullName>
    <description>A code denoting the appropriate reporting term corresponding to the performance measure for the grant program or Federal award project.</description>
    <label>Reporting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>