force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Reporting_Level_Type__c.field-meta.xml
<CustomField>
    <fullName>gr_Reporting_Level_Type__c</fullName>
    <description>A code denoting the level at which the performance measure is reported (e.g., school district, county) for the grant program or Federal award project.</description>
    <label>Reporting Level Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Congressional District</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>School district</fullName>
            </value>
            <value>
                <fullName>Zip Code</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>