force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Status__c.field-meta.xml
<CustomField>
    <fullName>gr_Status__c</fullName>
    <description>A code denoting the status of the identified performance measure (i.e., baseline, target, result) for the grant program or Federal award project.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>