force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Type__c.field-meta.xml
<CustomField>
    <fullName>gr_Type__c</fullName>
    <description>A code denoting the type of performance measure (e.g., output, outcome) against which the grant program or Federal award project can be measured.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Output</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>