force-app/main/default/objects/gr_PerformanceMeasure__c/fields/gr_Value__c.field-meta.xml
<CustomField>
    <fullName>gr_Value__c</fullName>
    <description>A quantitative or qualitative measurement identified as the baseline, target, or resultant measurement for the grant program or Federal award project.</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>